output.

** HTML engine: each footnote is enclosed in <div class="footnote">

Previously, each footnote was surrounded by <br> and </br>.  The above
change should make CSS customization easier.

** HTML engine: footnote HTML is now valid

It used to be that footnote HTML code contained an extraneous </div>,
and nested <a> tags, which is invalid.

** acmproc: Fix typos in the LaTeX engine customs
** `ref' warnings now always print the location of erroneous `:bib' references
** `numref' inserts an unbreakable space (was a breakable space) after its `:text'

* New in Skribilo 0.9.2

** Skribilo is now distributed under GPLv3 or later

Previous versions were under of GPLv2 or later.

** Improved configure-time diagnostics
** `skribilo' now displays a call stack trace upon error when possible
** `skribilo' now installs the user-specified locale
** New `--custom' compiler option
** Using `(image :url ...)' with `lout' yields a warning, not an error
** New `rss-2' input syntax, for RSS 2.0 feeds
** New Info engine, to produce `.info' files browseable with Emacs
** New `:info-node' option for `chapter', `section', etc.
** HTML engine: footnotes now yield hyperlinks back to the call site
** HTML engine: footnotes are properly printed for same-file chapters

Previously, footnotes would not get printed in the case of chapters that
are not output in a separate file.

** HTML engine: use ". " as the default chapter number-title separator
** HTML engine: the `charset' custom changes the output encoding (on Guile 2.0)
** Lout/LaTeX engine: new `encoding' custom
** Lout engine: `lout-illustration' calls the `inline-definitions-proc' custom
** Improved rendering of pie charts with Ploticus
** On Guile 2.0, modules are compiled and `.go' files are installed
** Improve internationalization of informative and error messages
** New test suite (run "make check")
** Various documentation fixes, improvements, and additions

* New in Skribilo 0.9.1
